Fixed some spacings in both mobile and desktop views.

--- a/scss/_beauty_desktop.scss
+++ b/scss/_beauty_desktop.scss
@@ -1,10 +1,11 @@
 @media (min-width: 900px) {
   .beauty__heading {
     max-width: 500px;
+    margin-block-start: 20px;
   }
 
   .beauty__portfolio_link {
-    margin-block-start: 28px;
+    margin-block-start: 32px;
     margin-block-end: 16px;
   }
 
@@ -40,6 +41,10 @@
     grid-column-gap: 64px;
     column-gap: 64px;
     margin-block-start: 72px;
+  }
+
+  .beauty__information_container {
+    margin-block-start: 0;
   }
 
   .carve {
