--- a/scss/_masthead_desktop.scss
+++ b/scss/_masthead_desktop.scss
@@ -20,6 +20,7 @@ input[type="checkbox"] {
 .masthead__header {
   text-transform: uppercase;
   line-height: 48px;
+  padding-block: 16px;
 }
 
 .masthead__link {
